kubernetes/traefik/ingressRoutes/grafana-IngressRoute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.ditaranto-homelab.com`)
      kind: Rule
      services:
        - name: vmks-grafana
          port: 80
  tls:
    secretName: grafana-certificate-secret
