kubernetes/traefik/ingressRoutes/longhorn-IngressRoute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingressroute
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.ditaranto-homelab.com`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-certificate-secret
