kubernetes/traefik/ingressRoutes/openproject-IngressRoute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openproject-ingressroute
  namespace: openproject
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`openproject.ditaranto-homelab.com`)
      kind: Rule
      services:
        - name: openproject
          port: 8080
  tls:
    secretName: openproject-certificate-secret
