kubernetes/traefik/ingressRoutes/test-nginx-ingressRoute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-nginx-ingressroute
  namespace: test-nginx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test-nginx.ditaranto-homelab.com`)
      kind: Rule
      services:
        - name: test-nginx
          port: 80
  tls:
    secretName: test-nginx-certificate-secret
